--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "vuex-mutations",
+  "name": "@inventistudio/vuex-mutations",
   "version": "1.0.0",
+  "author": "InventiStudio <hello@inventi.studio> (inventi.studio)",
   "main": "lib/index.js",
-  "author": "dex <piotrekfracek@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/InventiStudio/vuex-mutations.git"
+  },
   "scripts": {
     "test": "mocha test.js",
     "docs": "jsdoc2md -t .docs/README.md lib/*.js > README.md; echo"
